adds a update of the database for udf check to force our old db to add the field. as well as a missing language tag

--- a/lang/ilias_en.lang
+++ b/lang/ilias_en.lang
@@ -64,3 +64,4 @@ usr_orgu#:#Member of Org Unit
 common_actions#:#Actions
 button_select_user#:#Select Users
 userdef_users_assigned#:#%s Users updated
+set_Skin#:#Skin
